<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tw_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="80sp"
            tools:ignore="RtlCompat" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/side1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/AC"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_btn"
            android:text="@string/ac"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <Button
            android:id="@+id/seven"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_btn"
            android:text="@string/_7"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/main_cont"
            app:layout_constraintTop_toBottomOf="@id/AC" />

        <Button
            android:id="@+id/four"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_btn"
            android:text="@string/_4"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven" />

        <Button
            android:id="@+id/one"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle_btn"
            android:text="@string/_1"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/side2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/side1"
        app:layout_constraintTop_toBottomOf="@id/result">

        <Button

            android:id="@+id/p_or_n"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="+/-"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/eight"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="8"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/p_or_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/five"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="5"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/eight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/two"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="2"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/side3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/side2"
        app:layout_constraintTop_toBottomOf="@id/result">

        <Button
            android:id="@+id/percent"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="%"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/nine"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="9"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/six"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="6"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/three"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text="3"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/comma"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:text=","
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="95dp"
        android:layout_height="510dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/side3"
        app:layout_constraintTop_toBottomOf="@id/result">

        <Button
            android:id="@+id/division"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:text="/"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@id/multiply"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:text="*"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/minus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:text="-"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/plus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:text="+"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sum"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:text="="
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

        <Button
        android:id="@+id/zero"
        android:layout_width="195dp"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        android:background="@drawable/circle_btn"
        android:text="0"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@id/side3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/side1" />
</androidx.constraintlayout.widget.ConstraintLayout>